# url-handler

./: .gitignore  RDPURLHandler.spec  README.md  build_debian_installer.sh  build_mac_installer.sh  pyproject.toml  test.html
assets/: Info.plist  component.plist  rdp-url-handler.desktop  rdpurlhandler.desktop
assets/icons/: icon.icns
rdp_handler/: launcher.py  logger.py  main.py  parser.py  rdp_generator.py  registration.py
scripts/: postinst  postinstall  register_url_scheme_linux.sh  register_url_scheme_mac.sh
